tests/parsing/smtlib/v2.7/errors/040_indexed_identifier_bad_index_2.smt2
(set-logic ALL)
(assert (_ foo
